search field on mobile corrected width

--- a/docs/_sass/header.scss
+++ b/docs/_sass/header.scss
@@ -329,6 +329,7 @@ header nav > a#main-menu-toggle {
 
 				input {
 					min-width: auto;
+					width: 100%;
 				}
 			}
 		}
